Add commett; boxplots, group analysis and correlation insights

--- a/notebooks/eda_customer_analysis.ipynb
+++ b/notebooks/eda_customer_analysis.ipynb
@@ -274,14 +274,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5ff4d2ef-d3c0-4efb-9e4b-20b8ddce3560",
-   "metadata": {},
-   "source": [
-    "The average annual income is higher than the median, indicating a slightly right-skewed income distribution."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "b5c8fe64-640b-4ffd-a2ec-b8d1e85f3132",
@@ -305,6 +297,15 @@
     "plt.ylabel(\"Frequency\")\n",
     "plt.title(\"Distribution of Annual Income\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0b13e54-1aaf-4d25-85e2-d8974a13e087",
+   "metadata": {},
+   "source": [
+    "Dağılım tam simetrik olmamakla birlikte hafif sağa çarpıklık gözüküyor. Ortalama ve medyanın birbirine yakın olmasından\n",
+    "bu çarpıklığın aşırı olmadığını söyleyebiliriz. Buna ek olarak varyansın yüksek olduğu açık."
    ]
   },
   {
@@ -332,6 +333,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ee29557-e266-47b7-9ed8-80be0a11f0c2",
+   "metadata": {},
+   "source": [
+    "Belirgin aykırı değer görülmemektedir."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ffb3edb3-007d-44e6-af0e-97c1e44e9a99",
@@ -353,6 +362,15 @@
     "sns.boxplot(x=\"gender\", y=\"spending_score\", data=df)\n",
     "plt.title(\"Spending Score by Gender\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70869162-d751-4d09-ab7a-1242bfa9ee4b",
+   "metadata": {},
+   "source": [
+    "Cinsiyete göre harcama skoru karşılaştırılması yapılmıştır. Kadın bireylerin harcama skoru daha tutarlı ve yüksek iken erkek bireylerin \n",
+    "harcama skoru daha geniş aralıkta görülmektedir. "
    ]
   },
   {
@@ -408,9 +426,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df011468-fd37-4641-adce-cd49479723bb",
+   "metadata": {},
+   "source": [
+    "Yaş ile yıllık gelir arasında pozitif yönde oldukça güçlü ilişki bulunmaktadır (r=0.99). Yaş arttıkça yıllık gelir önemli ölçüde artar.\n",
+    "Yaş ile harcama skoru arasında negatif yönde çok zayıf ilişki bulunmaktadır."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "409ea733-c6fb-4a97-8d1a-29a72326720b",
+   "id": "e311cb78-a296-45b8-be76-b71ab97c1a65",
    "metadata": {},
    "outputs": [],
    "source": []
